--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
       <p class="ease-in-a">
         My name is Nhut (/'Ñüt/), I studied Multimedia Design and ended up working in the UI/UX industry.
         I love to work on new and exciting projects that hold good values to the world.
-        I quit my former job to focus on developing and prototyping my concepts, and am now open for
+        I quit my former job to focus on developing and prototyping my concepts, and am now open to
         a new one, as well as searching for the 'base', also happy to collaborate.
         <br />
         <br />
