--- a/index.html
+++ b/index.html
@@ -201,9 +201,9 @@
   <div class="works-wrapper">
 
     <div id="works-intro">
-      <h5 class="small-label ease-in-w">REAL WORKS</h5>
+      <h5 class="small-label ease-in-w">PAST WORKS</h5>
       <p class="ease-in-w">
-        Some real-life projects I've worked on as part of an UI/UX team.
+        Some projects I've worked on as part of an UI/UX team at my former company.
       </p>
     </div>
 
