--- a/index.html
+++ b/index.html
@@ -86,10 +86,10 @@
 <div class ="overlay" id="menu-overlay">
   <div class="menu-items" id="menu-links">
     <ul>
-      <li><a href="#home-intro" rel="m_PageScroll2id" onclick="closeMenu()">The Present</a></li>
-      <li><a href="#projects" rel="m_PageScroll2id" onclick="closeMenu()">The Future</a></li>
-      <li><a href="#works" rel="m_PageScroll2id" onclick="closeMenu()">The Past</a></li>
-      <li><a href="#about" rel="m_PageScroll2id" onclick="closeMenu()">The Me</a></li>
+      <li><a href="#home-intro" rel="m_PageScroll2id" onclick="closeMenu()">Home</a></li>
+      <li><a href="#projects" rel="m_PageScroll2id" onclick="closeMenu()">Schecker</a></li>
+      <li><a href="#works" rel="m_PageScroll2id" onclick="closeMenu()">Past Works</a></li>
+      <li><a href="#about" rel="m_PageScroll2id" onclick="closeMenu()">Me</a></li>
     </ul>
   </div>
   <i>nhuthoangdon@gmail.com</i>
