other projects added

--- a/index.html
+++ b/index.html
@@ -88,6 +88,7 @@
     <ul>
       <li><a href="#home-intro" rel="m_PageScroll2id" onclick="closeMenu()">Home</a></li>
       <li><a href="#projects" rel="m_PageScroll2id" onclick="closeMenu()">Schecker</a></li>
+      <li><a href="#other-concepts" rel="m_PageScroll2id" onclick="closeMenu()">Other Concepts</a></li>
       <li><a href="#works" rel="m_PageScroll2id" onclick="closeMenu()">Past Works</a></li>
       <li><a href="#about" rel="m_PageScroll2id" onclick="closeMenu()">Me</a></li>
     </ul>
@@ -182,6 +183,34 @@
 </section>
 
 
+
+
+
+<section class="side-projects" id="other-concepts">
+  <div id="other-projects_label">
+    <h5 class="small-label">CONCEPTS IN DEVELOPMENT</h5>
+    <p>
+      Ideas I'm working on
+    </p>
+  </div>
+
+  <div class="content-wrapper">
+
+    <a class="project-tile" id="MPF-tile" href="#">
+      <img class="other-logos" alt="My Plastic Footprint logo" src="./Assets/myPlasticFootprint_logo.png" />
+    </a>
+
+    <a class="project-tile" id="wishUp-tile" href="#">
+      <img class="other-logos" alt="WishUp logo" src="./Assets/wishUp_logo.png" />
+    </a>
+
+
+  </div>
+
+
+
+
+</section>
 
 
 
