finished other ideas section

--- a/index.html
+++ b/index.html
@@ -86,9 +86,9 @@
 <div class ="overlay" id="menu-overlay">
   <div class="menu-items" id="menu-links">
     <ul>
-      <li><a href="#home-intro" rel="m_PageScroll2id" onclick="closeMenu()">Home</a></li>
-      <li><a href="#projects" rel="m_PageScroll2id" onclick="closeMenu()">Schecker</a></li>
-      <li><a href="#other-concepts" rel="m_PageScroll2id" onclick="closeMenu()">Other Concepts</a></li>
+      <li><a href="#home-intro" rel="m_PageScroll2id" onclick="closeMenu()">Intro</a></li>
+      <li><a href="#projects" rel="m_PageScroll2id" onclick="closeMenu()">Latest Concept</a></li>
+      <li><a href="#other-concepts" rel="m_PageScroll2id" onclick="closeMenu()">Other Ideas</a></li>
       <li><a href="#works" rel="m_PageScroll2id" onclick="closeMenu()">Past Works</a></li>
       <li><a href="#about" rel="m_PageScroll2id" onclick="closeMenu()">Me</a></li>
     </ul>
@@ -122,7 +122,7 @@
       <p>
          I do <strong> UI&nbsp;/&nbsp;UX </strong>with a focus on
          <br />
-         <strong>Product&nbsp;Concepts</strong> &&nbsp;<strong>Development</strong>.
+         <strong>Product&nbsp;Ideas</strong> &&nbsp;<strong>Concepts</strong>.
       </p>
     </div>
     <!-- CTA arrow for next page -->
@@ -187,28 +187,21 @@
 
 
 <section class="side-projects" id="other-concepts">
-  <div id="other-projects_label">
-    <h5 class="small-label">CONCEPTS IN DEVELOPMENT</h5>
-    <p>
-      Ideas I'm working on
-    </p>
-  </div>
+
+    <h5 class="small-label ease-in-o">IDEAS IN DEVELOPMENT</h5>
 
   <div class="content-wrapper">
 
-    <a class="project-tile" id="MPF-tile" href="#">
+    <a class="project-tile ease-in-o" id="MPF-tile" href="#">
       <img class="other-logos" alt="My Plastic Footprint logo" src="./Assets/myPlasticFootprint_logo.png" />
     </a>
 
-    <a class="project-tile" id="wishUp-tile" href="#">
+    <a class="project-tile ease-in-o" id="wishUp-tile" href="#">
       <img class="other-logos" alt="WishUp logo" src="./Assets/wishUp_logo.png" />
     </a>
 
 
   </div>
-
-
-
 
 </section>
 
