--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
 
   <div class="content-wrapper">
 
-    <a class="project-tile ease-in-o" id="MPF-tile" href="#">
+    <a class="project-tile ease-in-o" id="MPF-tile" href="./myPlasticFootprint.html">
       <img class="other-logos" alt="My Plastic Footprint logo" src="./Assets/myPlasticFootprint_logo.png" />
     </a>
 
