--- a/scheckerIntro.html
+++ b/scheckerIntro.html
@@ -48,7 +48,9 @@
 
 <div class="wrapper grey">
     <div class="block intro">
-      <img class="logo" id="schecker-logo" alt="Schecker Logo" src="./Assets/schecker_logo_vertical.png" />
+      <a href="https://invis.io/B8RU1TAPZYV">
+        <img class="logo" id="schecker-logo" alt="Schecker Logo" src="./Assets/schecker_logo_vertical.png" />
+      </a>
       <h4>Check. Manage. Connect.</h4>
     </div>
 
@@ -67,7 +69,7 @@
 
 <div class="wrapper" id="hiw-section">
 
-        <div class="block" id="hiw_text-check">
+        <div class="block">
           <h5>HOW IT WORKS</h5>
           <h5 class="secondary-title">Check Symptom(s)</h5>
           <p>
@@ -77,7 +79,7 @@
           </p>
         </div>
 
-          <div class="block" id="hiw_ani-check">
+          <div class="block">
             <div class="hiw input">
               <i class="fas fa-search"></i>
               <span class="text-field">Your symptom</span>
@@ -85,7 +87,7 @@
           </div>
 
 
-          <div class="block" id="hiw_ani-result">
+          <div class="block">
             <div class="hiw result">
               <h6>YOU MIGHT HAVE</h6>
               <div class="progress-bar">
@@ -95,7 +97,7 @@
             </div>
           </div>
 
-        <div class="block" id="hiw_text-result">
+        <div class="block">
           <h5 class="secondary-title">Get Result</h5>
           <p>
             Result includes information about the user's symptom(s), prediction of the condition(s)/disease(s),
@@ -106,7 +108,7 @@
 
 
 
-        <div class="block" id="hiw_text-book">
+        <div class="block">
           <h5 class="secondary-title">Book Appointment</h5>
           <p>
             Book an appointment with Schecker's partnered Doctors/Clinics/Hospitals,
@@ -114,7 +116,7 @@
           </p>
         </div>
 
-        <div class="block" id="hiw_ani-book">
+        <div class="block">
           <div class="hiw book">
             <svg width="150px" height="195px" viewBox="0 0 150 195" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
                 <g id="Page-1" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
@@ -131,7 +133,7 @@
         </div>
 
 
-        <div class="block" id="hiw_ani-watch">
+        <div class="block">
           <div class="hiw watch">
             <svg id="watch-graph" width="450px" height="108px" viewBox="0 0 450 108" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
                 <g id="Page-1" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
@@ -148,7 +150,7 @@
           </div>
         </div>
 
-        <div class="block" id="hiw_text-watch">
+        <div class="block">
           <h5 class="secondary-title">Watch Symptom(s)</h5>
           <p>
             Keep track of symptom(s). The system will remind user to update progress of his/her symptom(s), if a symptom occurs for
