--- a/WishUp.html
+++ b/WishUp.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Ñütfolio - My Plastic Footprint</title>
+<title>Ñütfolio - WishUp</title>
 
   <meta charset="UTF-8">
   <meta name="description" content="Nhut's Portfolio">
   <meta name="keywords" content="Nhut Hoang-Don, Nhut Hoang, Nhut, Nhut H.Don, UI, UX, UI/UX Portfolio, Portfolio, Designer,
-                                 UI/UX Designer, Profile, Creative Portfolio, Creative Profile, My Plastic Footprint">
+                                 UI/UX Designer, Profile, Creative Portfolio, Creative Profile, WishUp">
   <meta name="author" content="Nhut H. Don">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -36,8 +36,6 @@
 
 
 <body>
-<div class="bg-img" id="mpf-bg">
-</div>
 
 
 
@@ -50,30 +48,34 @@
 
 
 
-<div class="wrapper">
+<div class="wrapper black">
     <div class="block intro">
-        <img class="logo" id="myPlasticFootprint-logo" alt="My Plastic Footprint Logo"
-             src="./Assets/myPlasticFootprint_logo.png" />
-      <h4>An app to track your plastic usage.</h4>
+        <img class="logo" id="wishUp-logo" alt="WishUp Logo"
+             src="./Assets/wishUp_logo.png" />
+      <h4>A social network for those in special circumstances to make a wish.</h4>
     </div>
 
     <div class="block">
       <h5>CONCEPT</h5>
       <p>
-        As the environmental issues associating with plastic are increasing, it seems one of the most possible
-        solutions that everyone can do at the moment is to reduce/reuse/recycle their plastic usage, and to
-        do that effectively, I think a tool to track our plastic usage would help.
+        Growing up close to my grandparents, I have developed a deep empathy and much respect to the elderly.
+        And after many conversations with different elders (plus that cutest movie "Up"), I realised that while everyone seems to have at least
+        a lifetime wish, not all are lucky enough to fulfil it during their younger years, and some wishes might
+        sound surprisingly simple and easy to some people, yet impossible to others. So I came up with this idea
+        to give those over 70, or anyone under a special circumstance in which they are unable to fulfil their
+        lifetime wishes while their life clock is ticking (e.g. a deadly disease) another chance.
         <br />
         <br />
-        The concept is rather simple, so is the app's interface. For each and every item that contains plastic bought
-        and/or thrown away, users mark their (negative) impacts; and vice versa, for each and every plastic item recycled,
-        users mark their (positive) impacts.
-        The goal is to either balance out the impacts (neutral), or better yet - to create positive ones.
+        The concept is that, everyone can join the network, but only those that meet the requirements
+        (there will be a verification process) can post a wish (others will also be able to nominate
+        and post in behalf of a qualified person too). Then the community of all users would 'vote',
+        donate or offer help to the one whose story touches them the most, donated funds will be used
+        to help those people accomplishing their lifetime wishes.
       </p>
     </div>
 
     <div class="block">
-      <img class="mockup" alt="Intro Image" id="MPF-introImg" src="./Assets/MPF-introImg.png" />
+      <img class="mockup" alt="Intro Image" id="wishUp-introImg" src="./Assets/wishUp-Intro-img.png" />
       <a href="http://www.freepik.com" class="freepik-credits" id="plastic-img-credit">
          Illustration designed by macrovector / Freepik</a>
     </div>
@@ -150,7 +152,7 @@
   <div class="footer-links">
     <a href="./index.html"><small class="footer-text">Home</small></a>
     <a href="./scheckerIntro.html"><small class="footer-text">Schecker</small></a>
-    <a href="./WishUp.html"><small class="footer-text">WishUp</small></a>
+    <a href="./myPlasticFootprint.html"><small class="footer-text">My Plastic Footprint</small></a>
   </div>
   <small class="footer-text" id="copyright">	&#169; 2019 NHUT H. DON</small>
 </footer>
