--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
       <img class="other-logos" alt="My Plastic Footprint logo" src="./Assets/myPlasticFootprint_logo.png" />
     </a>
 
-    <a class="project-tile ease-in-o" id="wishUp-tile" href="#">
+    <a class="project-tile ease-in-o" id="wishUp-tile" href="./WishUp.html">
       <img class="other-logos" alt="WishUp logo" src="./Assets/wishUp_logo.png" />
     </a>
 
