--- a/scheckerIntro.html
+++ b/scheckerIntro.html
@@ -39,7 +39,7 @@
 
 <a class="back-to-home" href="./index.html">
   <div class="simple-arrow"></div>
-  <h6 class="CTA-label">BACK</h6>
+  <h6 class="CTA-label">HOME</h6>
 </a>
 
 
@@ -243,7 +243,12 @@
 </div>
 
 <footer>
-  <small class="copyright">	&#169; 2019 NHUT H. DON</small>
+  <div class="footer-links">
+    <a href="./index.html"><small class="footer-text">Home</small></a>
+    <a href="./myPlasticFootprint.html"><small class="footer-text">My Plastic Footprint</small></a>
+    <a href="./WishUp.html"><small class="footer-text">WishUp</small></a>
+  </div>
+  <small class="footer-text" id="copyright">	&#169; 2019 NHUT H. DON</small>
 </footer>
 
 
