--- a/WishUp.html
+++ b/WishUp.html
@@ -49,92 +49,60 @@
 
 
 <div class="wrapper black">
-    <div class="block intro">
-        <img class="logo" id="wishUp-logo" alt="WishUp Logo"
-             src="./Assets/wishUp_logo.png" />
-      <h4>A social network for those in special circumstances to make a wish.</h4>
-    </div>
+  <div class="block intro">
+      <img class="logo" id="wishUp-logo" alt="WishUp Logo"
+           src="./Assets/wishUp_logo.png" />
+    <h4>A social network for those in special circumstances to make a wish.</h4>
+  </div>
+</div>
 
+
+<div class="wrapper division-line">
     <div class="block">
       <h5>CONCEPT</h5>
       <p>
         Growing up close to my grandparents, I have developed a deep empathy and much respect to the elderly.
-        And after many conversations with different elders (plus that cutest movie "Up"), I realised that while everyone seems to have at least
-        a lifetime wish, not all are lucky enough to fulfil it during their younger years, and some wishes might
-        sound surprisingly simple and easy to some people, yet impossible to others. So I came up with this idea
-        to give those over 70, or anyone under a special circumstance in which they are unable to fulfil their
-        lifetime wishes while their life clock is ticking (e.g. a deadly disease) another chance.
+        And after many conversations with different elders (plus that cute movie "Up"), I realised that while
+        everyone seems to have at least a lifetime wish, not all are lucky enough to fulfil it during their younger
+        years, and some wishes might sound surprisingly simple and easy to some people, yet impossible to others.
+        So I came up with this idea to give those over 70, or anyone under a special circumstance
+        (e.g. a deadly disease) in which they are unable to fulfil their lifetime wishes while their life clock
+        is ticking another chance.
         <br />
         <br />
         The concept is that, everyone can join the network, but only those that meet the requirements
         (there will be a verification process) can post a wish (others will also be able to nominate
-        and post in behalf of a qualified person too). Then the community of all users would 'vote',
-        donate or offer help to the one whose story touches them the most, donated funds will be used
+        and post in behalf of a qualified person too). Then the community of all users would 'like',
+        donate or offer help to the one(s) whose stories touches them the most, donated funds will be used
         to help those people accomplishing their lifetime wishes.
       </p>
     </div>
 
     <div class="block">
-      <img class="mockup" alt="Intro Image" id="wishUp-introImg" src="./Assets/wishUp-Intro-img.png" />
-      <a href="http://www.freepik.com" class="freepik-credits" id="plastic-img-credit">
-         Illustration designed by macrovector / Freepik</a>
+      <div class="hiw mpf">
+        <img alt="WishUp intro Illustration" class="mpf-hiw-img" id="wishUp_hiw-introImg"
+             src="./Assets/wishUp-hiw-intro.png" />
+      </div>
     </div>
 </div>
 
-<div class="wrapper" id="hiw-section">
+<div class="wrapper hiw-section">
 
         <div class="block">
           <h5>HOW IT WORKS</h5>
-          <h5 class="secondary-title">Mark Impacts</h5>
+          <h5 class="secondary-title">Likes - Donations - Sponsors</h5>
           <p>
-            Tap on the red foot if you just bought and/or threw away a new piece of plastic,
-            green foot if you just recycled or reused. Buying a new piece of plastic creates 1 negative impact,
-            throwing it away doubles the impact, so if you buy, for instance, a plastic water bottle and then
-            throw it away, you must mark your negative impacts two times.
+            The app works similar to other social networks, but users will be swiping through wishes (unfulfilled & fulfilled).
+            Once a 'wisher' gets enough funding and/or 'likes', we will help him/her to use it for his/her wish.
           </p>
         </div>
 
           <div class="block">
-            <div class="hiw mpf" id="mpf-hiw-img-intro">
-              <img alt="MPF intro Illustration" class="mpf-hiw-img" id="mpf_home-illustration"
-                   src="./Assets/mpf_home-illustration.png" />
+            <div class="hiw mpf" id="wishUp-hiw-img-intro">
+              <img alt="WishUp intro Illustration" class="mpf-hiw-img" id="wishUp_hiw-introImg"
+                   src="./Assets/wishUp-sponsor-img.png" />
             </div>
           </div>
-
-
-          <div class="block">
-            <div class="hiw mpf">
-              <img alt="MPF Plastic Symbol" class="mpf-hiw-img" id="mpf_plastic-icons"
-                   src="./Assets/recycle-symbols.png"/>
-              <a href="http://www.freepik.com" class="freepik-credits">
-                Icons made by Freepik from www.flaticon.com is licensed by CC 3.0 BY</a>
-            </div>
-          </div>
-
-        <div class="block">
-          <h5 class="secondary-title">Acknowledge the plastic</h5>
-          <p>
-            You can also put in the plastic numbers/abbreviations/names to get an estimation on how much of an impact
-            you just made, as well as recycling info and suggestions.
-          </p>
-        </div>
-
-
-        <div class="block">
-          <h5 class="secondary-title">Set goal & Compete</h5>
-          <p>
-            Set goals and motivate yourself by competing with others.
-          </p>
-        </div>
-
-        <div class="block" id="hiw_ani-book">
-          <div class="hiw mpf">
-            <img alt="MPF Goal Symbol" class="mpf-hiw-img" id="mpf_goal-icons"
-                 src="./Assets/bullseye.svg"/>
-            <a href="http://www.freepik.com" class="freepik-credits">
-             Icons made by Freepik from www.flaticon.com is licensed by CC 3.0 BY</a>
-          </div>
-        </div>
 
 </div>
 
