--- a/myPlasticFootprint.html
+++ b/myPlasticFootprint.html
@@ -73,13 +73,13 @@
     </div>
 
     <div class="block">
-      <img class="mockup" alt="Intro Image" id="MPF-introImg" src="./Assets/MPF-introImg.png" />
+      <img class="mockup" alt="Intro Image" src="./Assets/MPF-introImg.png" />
       <a href="http://www.freepik.com" class="freepik-credits" id="plastic-img-credit">
          Illustration designed by macrovector / Freepik</a>
     </div>
 </div>
 
-<div class="wrapper" id="hiw-section">
+<div class="wrapper hiw-section">
 
         <div class="block">
           <h5>HOW IT WORKS</h5>
