--- a/scheckerIntro.html
+++ b/scheckerIntro.html
@@ -67,7 +67,7 @@
     </div>
 </div>
 
-<div class="wrapper" id="hiw-section">
+<div class="wrapper hiw-section">
 
         <div class="block">
           <h5>HOW IT WORKS</h5>
