--- a/WishUp.html
+++ b/WishUp.html
@@ -90,7 +90,7 @@
 
         <div class="block">
           <h5>HOW IT WORKS</h5>
-          <h5 class="secondary-title">Likes - Donations - Sponsors</h5>
+          <h5 class="secondary-title">Wish luck - Donate - Sponsor</h5>
           <p>
             The app works similar to other social networks, but users will be swiping through wishes (unfulfilled & fulfilled).
             Once a 'wisher' gets enough funding and/or 'likes', we will help him/her to use it for his/her wish.
