--- a/scheckerIntro.html
+++ b/scheckerIntro.html
@@ -42,6 +42,9 @@
   <h6 class="CTA-label">HOME</h6>
 </a>
 
+<a class="invision-CTA" href="https://invis.io/B8RU1TAPZYV">
+  <img class="invision-icon" alt="Invision Icon" src="./Assets/invision-CTA.png" />
+</a>
 
 
 
