--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
       <h1>hi,</h1>
       <h5>I'm <strong>NHUT</strong></h5>
       <p>
-         I do <strong> UI&nbsp;/&nbsp;UX </strong>with a focus on
+         I do <strong> UIs&nbsp;/&nbsp;UXs </strong>and currently developing/prototyping my
          <br />
          <strong>Product&nbsp;Ideas</strong> &&nbsp;<strong>Concepts</strong>.
       </p>
@@ -254,7 +254,7 @@
     <div class="content-column">
       <h5 class="small-label ease-in-a">ABOUT ME</h5>
       <p class="ease-in-a">
-        My name is Nhut (/'Ñüt/), I do UI/UX and a bit of front-end (recently learning).
+        My name is Nhut (/'Ñüt/), I do UIs/UXs and a bit of front-end (recently learning).
         I am currently working on my ideas and concepts, if you find any of them interesting, please feel free to
         drop me a line, I'll be happy to collaborate.
         <br />
