--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
       <h1>hi,</h1>
       <h5>I'm <strong>NHUT</strong></h5>
       <p>
-         I do <strong> UIs&nbsp;/&nbsp;UXs </strong>and currently developing/prototyping my
+         I do <strong> UX&nbsp;/&nbsp;UI </strong>and currently developing/prototyping my
          <br />
          <strong>Product&nbsp;Ideas</strong> &&nbsp;<strong>Concepts</strong>.
       </p>
