--- a/scheckerIntro.html
+++ b/scheckerIntro.html
@@ -138,18 +138,7 @@
 
         <div class="block">
           <div class="hiw watch">
-            <svg id="watch-graph" width="450px" height="108px" viewBox="0 0 450 108" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
-                <g id="Page-1" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
-                    <polyline id="Path-2" stroke="#8C9BAF" fill-rule="nonzero" points="0 107 85.1538462 63.0606061 119.076923 84.6515152 149.538462 7 184.153846 84.6515152 230.538462 63.0606061 254.769231 92.6060606 322.615385 74.4242424 450 107"></polyline>
-                    <circle id="Oval" fill="#C2F14F" fill-rule="nonzero" cx="85.5" cy="63.5" r="7.5"></circle>
-                    <circle id="Oval-2" fill="#C2F14F" fill-rule="nonzero" cx="118.5" cy="83.5" r="7.5"></circle>
-                    <circle id="Oval-3" fill="#C2F14F" fill-rule="nonzero" cx="149.5" cy="7.5" r="7.5"></circle>
-                    <circle id="Oval-4" fill="#C2F14F" fill-rule="nonzero" cx="183.5" cy="83.5" r="7.5"></circle>
-                    <circle id="Oval-5" fill="#C2F14F" fill-rule="nonzero" cx="230.5" cy="63.5" r="7.5"></circle>
-                    <circle id="Oval-6" fill="#C2F14F" fill-rule="nonzero" cx="254.5" cy="92.5" r="7.5"></circle>
-                    <circle id="Oval-7" fill="#C2F14F" fill-rule="nonzero" cx="322.5" cy="74.5" r="7.5"></circle>
-                </g>
-            </svg>
+            <img alt="Symptoms Tracking Illustraion" class="mpf-hiw-img" src="./Assets/schecker-symptomcheck.png" />
           </div>
         </div>
 
