--- a/index.html
+++ b/index.html
@@ -120,9 +120,9 @@
       <h1>hi,</h1>
       <h5>I'm <strong>NHUT</strong></h5>
       <p>
-         I do <strong> UX&nbsp;/&nbsp;UI </strong>and currently developing/prototyping my
+         I do <strong> UX&nbsp;/&nbsp;UI </strong>and currently working on my
          <br />
-         <strong>Product&nbsp;Ideas</strong> &&nbsp;<strong>Concepts</strong>.
+         <strong>Product&nbsp;Ideas</strong>.
       </p>
     </div>
     <!-- CTA arrow for next page -->
@@ -252,11 +252,11 @@
 <section class="aboutme" id="about">
   <div class="wrapper">
     <div class="content-column">
-      <h5 class="small-label ease-in-a">ABOUT ME</h5>
+      <h5 class="small-label ease-in-a">SO...</h5>
       <p class="ease-in-a">
-        My name is Nhut (/'Ñüt/), I do UIs/UXs and a bit of front-end (recently learning).
-        I am currently working on my ideas and concepts, if you find any of them interesting, please feel free to
-        drop me a line, I'll be happy to collaborate.
+        I am looking for a work opportunity worldwide and working on realising my ideas.
+        If you find any of them interesting or got me an offer, please feel free to
+        drop me a line. I'll be happy to collaborate.
         <br />
         <br />
         <i class="ease-in-a">Social media isn't my cup of coffee, but I'm very reachable at
