--- a/scheckerIntro.html
+++ b/scheckerIntro.html
@@ -121,17 +121,7 @@
 
         <div class="block">
           <div class="hiw book">
-            <svg width="150px" height="195px" viewBox="0 0 150 195" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
-                <g id="Page-1" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
-                    <rect id="Rectangle" stroke="#8C9BAF" fill-rule="nonzero" x="0.5" y="45.5" width="149" height="149"></rect>
-                    <path d="M100,145 L50,145 L50,95 L1,95 L50,95 L50,145 L100,145 L100,95 L149,95 L100,95 L100,46 L100,95 L50,95 L50,46 L50,95 L100,95 L100,145 L149,145 L100,145 L100,194 L100,145 Z M50,145 L50,194 L50,145 L1,145 L50,145 Z" id="Combined-Shape" stroke="#8C9BAF" stroke-linecap="square" fill-rule="nonzero"></path>
-                    <path d="M107,102 L143,102 L143,138 L107,138 L107,102 Z M133.691082,111.385759 C133.162848,110.871414 132.306532,110.871414 131.778257,111.385759 L120.779318,122.09525 L118.221784,119.605205 C117.69355,119.09086 116.837276,119.09086 116.309001,119.605205 L114.396176,121.467694 C113.867941,121.982039
-                        113.867941,122.815798 114.396176,123.330183 L117.910142,126.751753 L119.822926,128.614241 C120.35116,129.128586 121.207723,129.128586 121.73571,128.614241 L123.648493,126.751753 L135.603824,115.110736 C136.132059,114.596391 136.132059,113.762592 135.603824,113.248247 L133.691082,111.385759 Z"
-                        id="checked-date" fill="#8C9BAF" fill-rule="nonzero"></path>
-                    <rect id="picked-date" fill="#8C9BAF" fill-rule="nonzero" x="107" y="102" width="36" height="36"></rect>
-                    <path d="M108,16 L108,0 L120,0 L120,16 L150,16 L150,45 L0,45 L0,16 L30,16 L30,0 L42,0 L42,16 L69,16 L69,0 L81,0 L81,16 L108,16 Z" id="Combined-Shape" fill="#8C9BAF" fill-rule="nonzero"></path>
-                </g>
-            </svg>
+            <img alt="Appointment booked Illustration" class="mpf-hiw-img" src="./Assets/schecker-book-illustration.png" />
           </div>
         </div>
 
