disabled touch, fixed footer on mobile

--- a/index.html
+++ b/index.html
@@ -4150,8 +4150,10 @@
   </div>
 </section>
 
+<footer>
+  <small class="copyright">	&#169; 2019 NHUT H. DON</small>
+</footer>
 
-<small class="copyright">	&#169; 2019 NHUT H. DON</small>
 
 
 
